examples/invalidos/sintaticos/ordem_errada.lumi
strip 10
rotate dir right 1 // Ordem dos argumentos está errada

// Erro esperado: O analisador sintático deve falhar com "syntax error", pois a ordem dos argumentos para o comando 'rotate' está incorreta.